kubernetesYAML/nginx/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    -  host: soa.microservicios.local
       http:
        paths:
        - path: /orders
          backend:
            serviceName: orders-service-svc
            servicePort: 80
        - path: /catalog
          backend:
            serviceName: catalog-service-svc
            servicePort: 80
        - path: /reports
          backend:
            serviceName: reports-service-svc
            servicePort: 80
        - path: /users
          backend:
            serviceName: users-service-svc
            servicePort: 80
